# wantedoc

./: .gitignore  0_rag init.ipynb  1_graph_with_rag.ipynb  README.md  pyproject.toml  rag_initializer.py
agent/: llm_prompt.py  rule_rag.py
lib/: pdf_util.py
lib/rag/: util.py
rules/: 기본문서_rule.txt  프로젝트관리양식_rule.txt
vectorstore/: chroma.sqlite3
